src/components/SearchResults/SearchResults.css
#store-results-section {
  overflow: hidden;
}

#store-results-tb {
  width: 100%;
  table-layout: auto;
  border-collapse: collapse;
}

#store-results-tb thead {
  text-transform: uppercase;
}

.store-results-tb__h th {
  padding: var(--global-padding-sm);
}

.store-results-tb__h td {
  padding: var(--global-padding-sm);
}

.store-results-tb__h {
  display: flex;
  justify-content: flex-start;
}

.store-results-tb__h :is(td, th) {
  justify-content: flex-start;
  width: 100%;
  text-align: left;
}

.th-index,
.th-rating {
  flex: 0 0 50px;
}

.th-services {
  flex: 0 0 100px;
}

thead .th-index,
thead .th-store-name,
thead .th-rating {
  cursor: pointer;
}

tbody .store-results-tb__h {
  cursor: pointer;
}

tbody .store-results-tb__h:hover > .th-store-name {
  text-decoration: underline;
}

@media (prefers-color-scheme: light) {
  #store-results-tb thead {
    background-color: #333;
    color: #fff;
  }

  #store-results-tb tr:nth-child(even) {
    background-color: #eee;
  }
}

@media (prefers-color-scheme: dark) {
  #store-results-tb thead {
    background-color: var(--global-light-grey);
    color: #fff;
  }

  #store-results-tb tr:nth-child(even) {
    --global-dark-grey: #343434;
    background-color: var(--global-dark-grey);
  }
}

